<resources>
    <string name="app_name">RoomDatabaseExample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_label">status_label</string>
    <string name="delete_task">delete_task</string>
    <string name="enter_task_title">enter_task_title</string>
    <string name="enter_task_detail">enter_task_detail</string>
    <string name="status_closed">status_closed</string>
    <string name="status_open">status_open</string>
    <string name="priority">priority</string>
    <string name="save_task">save_task</string>
    <string name="sort_by_priority">sort_by_priority</string>
    <string name="sort_by_title">sort_by_title</string>
    <string name="title_activity_task_adapter">TaskAdapter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>