<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
    tools:context="TaskDetailFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/status_group"
        app:layout_constraintStart_toStartOf="@+id/priority_label"
        android:text="@string/status_label"
        android:layout_marginTop="8dp"
        android:id="@+id/status_label"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/delete_task"
        android:layout_marginTop="32dp"
        android:id="@+id/delete_task"
        app:layout_constraintTop_toBottomOf="@+id/status_group"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_height="0dp"

        android:layout_width="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/task_priority_view"
        app:layout_constraintBottom_toBottomOf="@+id/task_title"
        android:background="#4CAF50"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/task_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/task_priority_view"
        android:textStyle="bold" android:textSize="18sp"
        android:maxLength="50" android:inputType="text"
        android:hint="@string/enter_task_title"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:layout_height="60dp"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/task_title"
        android:layout_marginTop="16dp"
        android:id="@+id/task_detail"
        app:layout_constraintTop_toBottomOf="@+id/task_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLength="150"
        android:inputType="text|textMultiLine"
        android:hint="@string/enter_task_detail"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/status_label"
        android:text="@string/save_task"
        android:layout_marginTop="32dp"
        android:id="@+id/save_task"
        app:layout_constraintTop_toBottomOf="@+id/status_group"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/task_detail"
        android:text="@string/priority"
        android:layout_marginTop="24dp"
        android:id="@+id/priority_label"
        app:layout_constraintTop_toBottomOf="@+id/task_detail"/>

    <Spinner
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="24dp"
        android:id="@+id/task_priority"
        app:layout_constraintTop_toBottomOf="@+id/task_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/priority_label"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"/>


    -<RadioGroup
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_marginTop="16dp"
    android:id="@+id/status_group"
    app:layout_constraintTop_toBottomOf="@+id/task_priority"
    app:layout_constraintStart_toEndOf="@+id/status_label"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:orientation="horizontal">

    <RadioButton
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:text="@string/status_open"
        android:id="@+id/status_open"
        android:checked="true"/>

    <RadioButton
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/status_closed"
        android:id="@+id/status_closed"
        android:layout_marginLeft="16dp"/>

</RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>